--- a/requirements.txt
+++ b/requirements.txt
@@ -96,6 +96,7 @@ decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
+git+https://github.com/facebookresearch/detectron2.git@v0.5
 dictdiffer==0.9.0
     # via dvc
 diskcache==5.4.0
@@ -312,6 +313,7 @@ numpy==1.22.3
     #   transformers
 oauthlib==3.2.0
     # via requests-oauthlib
+opencv-python-headless==4.5.5.64
 packaging==21.3
     # via
     #   bleach
@@ -668,6 +670,7 @@ zipp==3.8.0
     # via
     #   importlib-metadata
     #   importlib-resources
+
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
