trying to get detr2 installed

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,4 +1,11 @@
 stages:
+  install detr2:
+    cmd: >
+      python -m pip install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'
+      && echo "detectron2 installed"
+    outs:
+      - logs/detr2.log
+
   test_visual_bert_with_od:
     cmd: >
         python -m hateful_memes.models.visual_bert_with_od
@@ -8,6 +15,7 @@ stages:
     deps:
       - data/01_raw/hateful_memes
       - hateful_memes/models/visual_bert_with_od.py
+      - logs/detr2.log
     outs:
       - logs/test_visual_bert_with_od.log
 
