--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,14 @@ aioitertools==0.10.0
     # via aiobotocore
 aiosignal==1.2.0
     # via aiohttp
+antlr4-python3-runtime==4.8
+    # via
+    #   hydra-core
+    #   omegaconf
 appdirs==1.4.4
-    # via dvc
+    # via
+    #   black
+    #   dvc
 argon2-cffi==21.3.0
     # via notebook
 argon2-cffi-bindings==21.2.0
@@ -48,6 +54,8 @@ backcall==0.2.0
     # via ipython
 beautifulsoup4==4.10.0
     # via nbconvert
+black==21.4b2
+    # via detectron2
 bleach==4.1.0
     # via nbconvert
 boto3==1.21.21
@@ -75,9 +83,12 @@ charset-normalizer==2.0.12
     #   requests
 click==8.1.2
     # via
+    #   black
     #   pip-tools
     #   sacremoses
     #   wandb
+cloudpickle==2.0.0
+    # via detectron2
 colorama==0.4.4
     # via
     #   dvc
@@ -96,6 +107,8 @@ decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git@v0.5
+    # via -r requirements.in
 dictdiffer==0.9.0
     # via dvc
 diskcache==5.4.0
@@ -150,7 +163,11 @@ funcy==1.17
     #   dvc-render
     #   scmrepo
 future==0.18.2
-    # via grandalf
+    # via
+    #   detectron2
+    #   grandalf
+fvcore==0.1.5.post20220414
+    # via detectron2
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
@@ -169,6 +186,8 @@ grpcio==1.44.0
     # via tensorboard
 huggingface-hub==0.4.0
     # via transformers
+hydra-core==1.1.2
+    # via detectron2
 icecream==2.1.2
     # via -r requirements.in
 idna==3.3
@@ -179,10 +198,15 @@ imageio==2.16.1
     # via scikit-image
 importlib-metadata==4.11.3
     # via markdown
-importlib-resources==5.6.0
+importlib-resources==5.2.3
     # via
     #   dvc
+    #   hydra-core
     #   jsonschema
+iopath==0.1.9
+    # via
+    #   detectron2
+    #   fvcore
 ipykernel==6.11.0
     # via
     #   ipywidgets
@@ -251,7 +275,10 @@ markupsafe==2.1.1
     #   jinja2
     #   nbconvert
 matplotlib==3.5.1
-    # via seaborn
+    # via
+    #   detectron2
+    #   pycocotools
+    #   seaborn
 matplotlib-inline==0.1.3
     # via
     #   ipykernel
@@ -262,6 +289,8 @@ multidict==6.0.2
     # via
     #   aiohttp
     #   yarl
+mypy-extensions==0.4.3
+    # via black
 nanotime==0.5.2
     # via dvc
 nbclient==0.5.13
@@ -296,9 +325,11 @@ notebook==6.4.10
 numpy==1.22.3
     # via
     #   -r requirements.in
+    #   fvcore
     #   imageio
     #   matplotlib
     #   pandas
+    #   pycocotools
     #   pytorch-lightning
     #   pywavelets
     #   scikit-image
@@ -312,7 +343,10 @@ numpy==1.22.3
     #   transformers
 oauthlib==3.2.0
     # via requests-oauthlib
-opencv-python-headless==4.5.5.64
+omegaconf==2.1.2
+    # via
+    #   detectron2
+    #   hydra-core
 packaging==21.3
     # via
     #   bleach
@@ -335,6 +369,7 @@ parso==0.8.3
     # via jedi
 pathspec==0.9.0
     # via
+    #   black
     #   dvc
     #   scmrepo
 pathtools==0.1.2
@@ -350,6 +385,8 @@ pickleshare==0.7.5
 pillow==9.1.0
     # via
     #   -r requirements.in
+    #   detectron2
+    #   fvcore
     #   imageio
     #   matplotlib
     #   scikit-image
@@ -360,6 +397,8 @@ plotly==5.7.0
     # via -r requirements.in
 ply==3.11
     # via dvc
+portalocker==2.4.0
+    # via iopath
 prometheus-client==0.13.1
     # via notebook
 promise==2.3
@@ -391,6 +430,8 @@ pyasn1==0.4.8
     #   rsa
 pyasn1-modules==0.2.8
     # via google-auth
+pycocotools==2.0.4
+    # via detectron2
 pycparser==2.21
     # via cffi
 pydeprecate==0.3.2
@@ -398,7 +439,9 @@ pydeprecate==0.3.2
     #   pytorch-lightning
     #   torchmetrics
 pydot==1.4.2
-    # via dvc
+    # via
+    #   detectron2
+    #   dvc
 pygit2==1.9.1
     # via scmrepo
 pygments==2.11.2
@@ -445,12 +488,15 @@ pywavelets==1.3.0
     # via scikit-image
 pyyaml==6.0
     # via
+    #   fvcore
     #   huggingface-hub
     #   jsonargparse
+    #   omegaconf
     #   python-benedict
     #   pytorch-lightning
     #   transformers
     #   wandb
+    #   yacs
 pyzmq==22.3.0
     # via
     #   jupyter-client
@@ -462,6 +508,7 @@ qtpy==2.0.1
     # via qtconsole
 regex==2022.3.15
     # via
+    #   black
     #   sacremoses
     #   transformers
 requests==2.27.1
@@ -537,12 +584,15 @@ stack-data==0.2.0
     # via ipython
 tabulate==0.8.9
     # via
+    #   detectron2
     #   dvc
     #   dvc-render
+    #   fvcore
 tenacity==8.0.1
     # via plotly
 tensorboard==2.8.0
     # via
+    #   detectron2
     #   pytorch-lightning
     #   torch-tb-profiler
 tensorboard-data-server==0.6.1
@@ -550,7 +600,10 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
     # via tensorboard
 termcolor==1.1.0
-    # via yaspin
+    # via
+    #   detectron2
+    #   fvcore
+    #   yaspin
 terminado==0.13.3
     # via notebook
 testpath==0.6.0
@@ -565,6 +618,7 @@ tokenizers==0.11.6
     # via transformers
 toml==0.10.2
     # via
+    #   black
     #   dvc
     #   python-benedict
 tomli==2.0.1
@@ -600,8 +654,11 @@ tornado==6.1
     #   terminado
 tqdm==4.64.0
     # via
+    #   detectron2
     #   dvc
+    #   fvcore
     #   huggingface-hub
+    #   iopath
     #   pytorch-lightning
     #   sacremoses
     #   torchtext
@@ -659,6 +716,10 @@ wrapt==1.14.0
     # via aiobotocore
 xmltodict==0.12.0
     # via python-benedict
+yacs==0.1.8
+    # via
+    #   detectron2
+    #   fvcore
 yarl==1.7.2
     # via aiohttp
 yaspin==2.1.0
@@ -669,7 +730,6 @@ zipp==3.8.0
     # via
     #   importlib-metadata
     #   importlib-resources
-
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
