install detectron after requirements.txt

--- a/requirements.in
+++ b/requirements.in
@@ -31,4 +31,4 @@ torch-tb-profiler
 
 timm
 opencv-python-headless
-git+https://github.com/facebookresearch/detectron2.git@v0.5
+# git+https://github.com/facebookresearch/detectron2.git@v0.5
