--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          apt-get install -y ninja-build
+          apt-get update && apt-get install -y ninja-build
           pip install -r requirements.txt --no-cache-dir
           pip install -e .
           python -m pip install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'
