--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -39,10 +39,10 @@ jobs:
 
       - name: Install requirements
         run: |
-          apt-get update && apt-get install -y ninja-build
           pip install -r requirements.txt --no-cache-dir
           pip install -e .
-          python -m pip install 'git+https://github.com/facebookresearch/detectron2.git'
+          python -c 'import torch; from torch.utils.cpp_extension import CUDA_HOME; print(torch.cuda.is_available(), CUDA_HOME)'
+          python -m pip install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'
 
       - name: Pull data
         run: dvc pull data/01_raw/hateful_memes
