--- a/.github/workflows/sweep.yaml
+++ b/.github/workflows/sweep.yaml
@@ -37,7 +37,11 @@ jobs:
           ref: ${{ github.head_ref }} # https://github.com/stefanzweifel/git-auto-commit-action
 
       - name: Install requirements
-        run: pip install -r requirements.txt --no-cache-dir
+        run: |
+          pip install -r requirements.txt --no-cache-dir
+          pip install -e .
+          python -c 'import torch; from torch.utils.cpp_extension import CUDA_HOME; print(torch.cuda.is_available(), CUDA_HOME)'
+          python -m pip install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'
 
       - name: Install as local package
         run: pip install -e .
