--- a/.github/workflows/sweep.yaml
+++ b/.github/workflows/sweep.yaml
@@ -43,11 +43,10 @@ jobs:
           python -c 'import torch; from torch.utils.cpp_extension import CUDA_HOME; print(torch.cuda.is_available(), CUDA_HOME)'
           python -m pip install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'
 
-      - name: Install as local package
-        run: pip install -e .
-
       - name: pull_data
         run: dvc pull data/01_raw/hateful_memes
+      - name: pull everything else
+        run: dvc pull 
 
       - name: Sweep
         run: wandb agent ${{ github.event.inputs.sweep_id }}
@@ -72,13 +71,16 @@ jobs:
           ref: ${{ github.head_ref }} # https://github.com/stefanzweifel/git-auto-commit-action
 
       - name: Install requirements
-        run: pip install -r requirements.txt --no-cache-dir
-
-      - name: Install as local package
-        run: pip install -e .
+        run: |
+          pip install -r requirements.txt --no-cache-dir
+          pip install -e .
+          python -c 'import torch; from torch.utils.cpp_extension import CUDA_HOME; print(torch.cuda.is_available(), CUDA_HOME)'
+          python -m pip install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'
 
       - name: pull_data
         run: dvc pull data/01_raw/hateful_memes
+      - name: pull everything else
+        run: dvc pull 
 
       - name: Sweep
         run: wandb agent ${{ github.event.inputs.sweep_id }}
