--- a/requirements.txt
+++ b/requirements.txt
@@ -24,14 +24,8 @@ aioitertools==0.10.0
     # via aiobotocore
 aiosignal==1.2.0
     # via aiohttp
-antlr4-python3-runtime==4.8
-    # via
-    #   hydra-core
-    #   omegaconf
 appdirs==1.4.4
-    # via
-    #   black
-    #   dvc
+    # via dvc
 argon2-cffi==21.3.0
     # via notebook
 argon2-cffi-bindings==21.2.0
@@ -54,8 +48,6 @@ backcall==0.2.0
     # via ipython
 beautifulsoup4==4.10.0
     # via nbconvert
-black==21.4b2
-    # via detectron2
 bleach==4.1.0
     # via nbconvert
 boto3==1.21.21
@@ -83,12 +75,9 @@ charset-normalizer==2.0.12
     #   requests
 click==8.1.2
     # via
-    #   black
     #   pip-tools
     #   sacremoses
     #   wandb
-cloudpickle==2.0.0
-    # via detectron2
 colorama==0.4.4
     # via
     #   dvc
@@ -107,8 +96,6 @@ decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
-# detectron2 @ git+https://github.com/facebookresearch/detectron2.git@v0.5
-    # via -r requirements.in
 dictdiffer==0.9.0
     # via dvc
 diskcache==5.4.0
@@ -163,11 +150,7 @@ funcy==1.17
     #   dvc-render
     #   scmrepo
 future==0.18.2
-    # via
-    #   detectron2
-    #   grandalf
-fvcore==0.1.5.post20220414
-    # via detectron2
+    # via grandalf
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
@@ -186,8 +169,6 @@ grpcio==1.44.0
     # via tensorboard
 huggingface-hub==0.4.0
     # via transformers
-hydra-core==1.1.2
-    # via detectron2
 icecream==2.1.2
     # via -r requirements.in
 idna==3.3
@@ -201,12 +182,7 @@ importlib-metadata==4.11.3
 importlib-resources==5.2.3
     # via
     #   dvc
-    #   hydra-core
     #   jsonschema
-iopath==0.1.9
-    # via
-    #   detectron2
-    #   fvcore
 ipykernel==6.11.0
     # via
     #   ipywidgets
@@ -275,10 +251,7 @@ markupsafe==2.1.1
     #   jinja2
     #   nbconvert
 matplotlib==3.5.1
-    # via
-    #   detectron2
-    #   pycocotools
-    #   seaborn
+    # via seaborn
 matplotlib-inline==0.1.3
     # via
     #   ipykernel
@@ -289,8 +262,6 @@ multidict==6.0.2
     # via
     #   aiohttp
     #   yarl
-mypy-extensions==0.4.3
-    # via black
 nanotime==0.5.2
     # via dvc
 nbclient==0.5.13
@@ -325,11 +296,10 @@ notebook==6.4.10
 numpy==1.22.3
     # via
     #   -r requirements.in
-    #   fvcore
     #   imageio
     #   matplotlib
+    #   opencv-python-headless
     #   pandas
-    #   pycocotools
     #   pytorch-lightning
     #   pywavelets
     #   scikit-image
@@ -343,11 +313,8 @@ numpy==1.22.3
     #   transformers
 oauthlib==3.2.0
     # via requests-oauthlib
-omegaconf==2.1.2
-    # via
-    #   detectron2
-    #   hydra-core
 opencv-python-headless==4.5.5.64
+    # via -r requirements.in
 packaging==21.3
     # via
     #   bleach
@@ -370,7 +337,6 @@ parso==0.8.3
     # via jedi
 pathspec==0.9.0
     # via
-    #   black
     #   dvc
     #   scmrepo
 pathtools==0.1.2
@@ -386,8 +352,6 @@ pickleshare==0.7.5
 pillow==9.1.0
     # via
     #   -r requirements.in
-    #   detectron2
-    #   fvcore
     #   imageio
     #   matplotlib
     #   scikit-image
@@ -398,8 +362,6 @@ plotly==5.7.0
     # via -r requirements.in
 ply==3.11
     # via dvc
-portalocker==2.4.0
-    # via iopath
 prometheus-client==0.13.1
     # via notebook
 promise==2.3
@@ -431,8 +393,6 @@ pyasn1==0.4.8
     #   rsa
 pyasn1-modules==0.2.8
     # via google-auth
-pycocotools==2.0.4
-    # via detectron2
 pycparser==2.21
     # via cffi
 pydeprecate==0.3.2
@@ -440,9 +400,7 @@ pydeprecate==0.3.2
     #   pytorch-lightning
     #   torchmetrics
 pydot==1.4.2
-    # via
-    #   detectron2
-    #   dvc
+    # via dvc
 pygit2==1.9.1
     # via scmrepo
 pygments==2.11.2
@@ -489,15 +447,12 @@ pywavelets==1.3.0
     # via scikit-image
 pyyaml==6.0
     # via
-    #   fvcore
     #   huggingface-hub
     #   jsonargparse
-    #   omegaconf
     #   python-benedict
     #   pytorch-lightning
     #   transformers
     #   wandb
-    #   yacs
 pyzmq==22.3.0
     # via
     #   jupyter-client
@@ -509,7 +464,6 @@ qtpy==2.0.1
     # via qtconsole
 regex==2022.3.15
     # via
-    #   black
     #   sacremoses
     #   transformers
 requests==2.27.1
@@ -585,15 +539,12 @@ stack-data==0.2.0
     # via ipython
 tabulate==0.8.9
     # via
-    #   detectron2
     #   dvc
     #   dvc-render
-    #   fvcore
 tenacity==8.0.1
     # via plotly
 tensorboard==2.8.0
     # via
-    #   detectron2
     #   pytorch-lightning
     #   torch-tb-profiler
 tensorboard-data-server==0.6.1
@@ -601,10 +552,7 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
     # via tensorboard
 termcolor==1.1.0
-    # via
-    #   detectron2
-    #   fvcore
-    #   yaspin
+    # via yaspin
 terminado==0.13.3
     # via notebook
 testpath==0.6.0
@@ -619,7 +567,6 @@ tokenizers==0.11.6
     # via transformers
 toml==0.10.2
     # via
-    #   black
     #   dvc
     #   python-benedict
 tomli==2.0.1
@@ -655,11 +602,8 @@ tornado==6.1
     #   terminado
 tqdm==4.64.0
     # via
-    #   detectron2
     #   dvc
-    #   fvcore
     #   huggingface-hub
-    #   iopath
     #   pytorch-lightning
     #   sacremoses
     #   torchtext
@@ -717,10 +661,6 @@ wrapt==1.14.0
     # via aiobotocore
 xmltodict==0.12.0
     # via python-benedict
-yacs==0.1.8
-    # via
-    #   detectron2
-    #   fvcore
 yarl==1.7.2
     # via aiohttp
 yaspin==2.1.0
