--- a/requirements.txt
+++ b/requirements.txt
@@ -28,11 +28,9 @@ aioitertools==0.10.0
 aiosignal==1.2.0
     # via aiohttp
 antlr4-python3-runtime==4.8
-
+    # via hydra-core
 appdirs==1.4.4
-    # via
-    #   black
-    #   dvc
+    # via dvc
 argon2-cffi==21.3.0
     # via notebook
 argon2-cffi-bindings==21.2.0
@@ -57,8 +55,6 @@ beautifulsoup4==4.10.0
     # via nbconvert
 bitarray==2.4.1
     # via fairseq
-
-black==21.4b2
 bleach==4.1.0
     # via nbconvert
 boto3==1.21.21
@@ -87,11 +83,10 @@ charset-normalizer==2.0.12
     #   requests
 click==8.1.2
     # via
+    #   nltk
     #   pip-tools
     #   sacremoses
     #   wandb
-cloudpickle==2.0.0
-    # via detectron2
 colorama==0.4.4
     # via
     #   dvc
@@ -115,8 +110,6 @@ decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
-# detectron2 @ git+https://github.com/facebookresearch/detectron2.git@v0.5
-    # via -r requirements.in
 dictdiffer==0.9.0
     # via dvc
 dill==0.3.4
@@ -182,11 +175,7 @@ funcy==1.17
     #   dvc-render
     #   scmrepo
 future==0.18.2
-    # via
-    #   detectron2
-    #   grandalf
-fvcore==0.1.5.post20220414
-    # via detectron2
+    # via grandalf
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
@@ -204,7 +193,11 @@ grandalf==0.6
 grpcio==1.44.0
     # via tensorboard
 huggingface-hub==0.4.0
-
+    # via
+    #   datasets
+    #   transformers
+hydra-core==1.0.7
+    # via fairseq
 icecream==2.1.2
     # via -r requirements.in
 idna==3.3
@@ -220,10 +213,6 @@ importlib-resources==5.2.3
     #   dvc
     #   hydra-core
     #   jsonschema
-iopath==0.1.9
-    # via
-    #   detectron2
-    #   fvcore
 ipykernel==6.11.0
     # via
     #   ipywidgets
@@ -295,7 +284,6 @@ markupsafe==2.1.1
     #   nbconvert
 matplotlib==3.5.1
     # via
-
     #   pycocotools
     #   seaborn
 matplotlib-inline==0.1.3
@@ -308,7 +296,8 @@ multidict==6.0.2
     # via
     #   aiohttp
     #   yarl
-
+multiprocess==0.70.12.2
+    # via datasets
 nanotime==0.5.2
     # via dvc
 nbclient==0.5.13
@@ -345,12 +334,13 @@ notebook==6.4.10
 numpy==1.22.3
     # via
     #   -r requirements.in
-
+    #   datasets
+    #   fairseq
     #   imageio
     #   matplotlib
     #   opencv-python-headless
     #   pandas
-
+    #   pyarrow
     #   pycocotools
     #   pytorch-lightning
     #   pywavelets
@@ -368,7 +358,14 @@ numpy==1.22.3
     #   transformers
 oauthlib==3.2.0
     # via requests-oauthlib
-
+ofa @ git+https://github.com/mthoreson3/OFA@26916038139a44eaafa06c6d7e04b87ef4d1bc0a
+    # via -r requirements.in
+omegaconf==2.0.6
+    # via
+    #   fairseq
+    #   hydra-core
+opencv-python-headless==4.5.5.64
+    # via -r requirements.in
 packaging==21.3
     # via
     #   bleach
@@ -393,7 +390,6 @@ parso==0.8.3
     # via jedi
 pathspec==0.9.0
     # via
-    #   black
     #   dvc
     #   scmrepo
 pathtools==0.1.2
@@ -409,8 +405,6 @@ pickleshare==0.7.5
 pillow==9.1.0
     # via
     #   -r requirements.in
-    #   detectron2
-    #   fvcore
     #   imageio
     #   matplotlib
     #   scikit-image
@@ -422,7 +416,7 @@ plotly==5.7.0
 ply==3.11
     # via dvc
 portalocker==2.4.0
-
+    # via sacrebleu
 prometheus-client==0.13.1
     # via notebook
 promise==2.3
@@ -457,7 +451,12 @@ pyasn1==0.4.8
     #   rsa
 pyasn1-modules==0.2.8
     # via google-auth
-
+pycocoevalcap==1.2
+    # via -r requirements.in
+pycocotools==2.0.4
+    # via
+    #   -r requirements.in
+    #   pycocoevalcap
 pycparser==2.21
     # via cffi
 pydeprecate==0.3.2
@@ -465,9 +464,7 @@ pydeprecate==0.3.2
     #   pytorch-lightning
     #   torchmetrics
 pydot==1.4.2
-    # via
-    #   detectron2
-    #   dvc
+    # via dvc
 pygit2==1.9.1
     # via scmrepo
 pygments==2.11.2
@@ -514,7 +511,6 @@ pywavelets==1.3.0
     # via scikit-image
 pyyaml==6.0
     # via
-    #   fvcore
     #   huggingface-hub
     #   jsonargparse
     #   omegaconf
@@ -522,7 +518,6 @@ pyyaml==6.0
     #   pytorch-lightning
     #   transformers
     #   wandb
-    #   yacs
 pyzmq==22.3.0
     # via
     #   jupyter-client
@@ -534,7 +529,9 @@ qtpy==2.0.1
     # via qtconsole
 regex==2022.3.15
     # via
-
+    #   fairseq
+    #   nltk
+    #   sacrebleu
     #   sacremoses
     #   transformers
 requests==2.27.1
@@ -619,15 +616,13 @@ stack-data==0.2.0
     # via ipython
 tabulate==0.8.9
     # via
-    #   detectron2
     #   dvc
     #   dvc-render
-
+    #   sacrebleu
 tenacity==8.0.1
     # via plotly
 tensorboard==2.8.0
     # via
-    #   detectron2
     #   pytorch-lightning
     #   torch-tb-profiler
 tensorboard-data-server==0.6.1
@@ -637,10 +632,7 @@ tensorboard-plugin-wit==1.8.1
 tensorboardx==2.4.1
     # via -r requirements.in
 termcolor==1.1.0
-    # via
-    #   detectron2
-    #   fvcore
-    #   yaspin
+    # via yaspin
 terminado==0.13.3
     # via notebook
 testpath==0.6.0
@@ -655,7 +647,6 @@ tokenizers==0.11.6
     # via transformers
 toml==0.10.2
     # via
-    #   black
     #   dvc
     #   python-benedict
 tomli==2.0.1
@@ -673,7 +664,13 @@ torch==1.11.0+cu113
 torch-tb-profiler==0.4.0
     # via -r requirements.in
 torchaudio==0.11.0+cu113
-
+    # via
+    #   -r requirements.in
+    #   fairseq
+torchmetrics==0.8.0
+    # via
+    #   -r requirements.in
+    #   pytorch-lightning
 torchtext==0.12.0
     # via -r requirements.in
 torchvision==0.12.0+cu113
@@ -688,7 +685,11 @@ tornado==6.1
     #   terminado
 tqdm==4.64.0
     # via
-
+    #   datasets
+    #   dvc
+    #   fairseq
+    #   huggingface-hub
+    #   nltk
     #   pytorch-lightning
     #   sacremoses
     #   torchtext
@@ -748,7 +749,8 @@ wrapt==1.14.0
     # via aiobotocore
 xmltodict==0.12.0
     # via python-benedict
-
+xxhash==3.0.0
+    # via datasets
 yarl==1.7.2
     # via aiohttp
 yaspin==2.1.0
