Tweaking training environment.

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -24,8 +24,8 @@ jobs:
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         ENABLE_PROGRESS_BAR: 0
-        TOKENIZERS_PARALLELISM: false
-      options: --gpus all --shm-size=8G
+        TOKENIZERS_PARALLELISM: true
+      options: --gpus all --shm-size=16gb
 
     timeout-minutes: 1440  # Increased job runtime since ML is slow
     steps:
