--- a/requirements.in
+++ b/requirements.in
@@ -40,7 +40,7 @@ ftfy==6.0.3
 tensorboardX==2.4.1
 pycocotools==2.0.4
 pycocoevalcap==1.2
-pytorch_lightning
+pytorch_lightning==1.5.10
 einops
 datasets
 rouge_score
