--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ asttokens==2.0.5
     #   stack-data
 async-timeout==4.0.2
     # via aiohttp
-asyncssh==2.10.0
+asyncssh==2.10.1
     # via scmrepo
 atpublic==3.0.1
     # via flufl-lock
@@ -51,11 +51,11 @@ attrs==21.4.0
     #   jsonschema
 backcall==0.2.0
     # via ipython
-beautifulsoup4==4.10.0
+beautifulsoup4==4.11.1
     # via nbconvert
 bitarray==2.4.1
     # via fairseq
-bleach==4.1.0
+bleach==5.0.0
     # via nbconvert
 boto3==1.21.21
     # via aiobotocore
@@ -81,7 +81,7 @@ charset-normalizer==2.0.12
     # via
     #   aiohttp
     #   requests
-click==8.1.2
+click==8.1.3
     # via
     #   nltk
     #   pip-tools
@@ -96,7 +96,7 @@ commonmark==0.9.1
     # via rich
 configobj==5.0.6
     # via dvc
-cryptography==36.0.2
+cryptography==37.0.1
     # via asyncssh
 cycler==0.11.0
     # via matplotlib
@@ -122,7 +122,7 @@ distro==1.7.0
     # via dvc
 docker-pycreds==0.4.0
     # via wandb
-docstring-parser==0.13
+docstring-parser==0.14.1
     # via jsonargparse
 dpath==2.0.6
     # via dvc
@@ -144,6 +144,8 @@ executing==0.8.3
     #   stack-data
 fairseq @ git+https://github.com/pytorch/fairseq@806855bf660ea748ed7ffb42fe8dcc881ca3aca0
     # via -r requirements.in
+fastjsonschema==2.15.3
+    # via nbformat
 filelock==3.6.0
     # via
     #   huggingface-hub
@@ -152,7 +154,7 @@ flatten-dict==0.4.2
     # via dvc
 flufl-lock==7.0
     # via dvc
-fonttools==4.31.2
+fonttools==4.33.3
     # via matplotlib
 frozenlist==1.3.0
     # via
@@ -175,14 +177,16 @@ funcy==1.17
     #   dvc-render
     #   scmrepo
 future==0.18.2
-    # via grandalf
+    # via
+    #   grandalf
+    #   pytorch-lightning
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
     # via
     #   scmrepo
     #   wandb
-google-auth==2.6.2
+google-auth==2.6.6
     # via
     #   google-auth-oauthlib
     #   tensorboard
@@ -192,7 +196,7 @@ grandalf==0.6
     # via dvc
 grpcio==1.44.0
     # via tensorboard
-huggingface-hub==0.4.0
+huggingface-hub==0.5.1
     # via
     #   datasets
     #   transformers
@@ -204,22 +208,23 @@ idna==3.3
     # via
     #   requests
     #   yarl
-imageio==2.16.1
+imageio==2.18.0
     # via scikit-image
 importlib-metadata==4.11.3
     # via markdown
-importlib-resources==5.2.3
+importlib-resources==5.7.1
     # via
     #   dvc
+    #   hydra-core
     #   jsonschema
-ipykernel==6.11.0
+ipykernel==6.13.0
     # via
     #   ipywidgets
     #   jupyter
     #   jupyter-console
     #   notebook
     #   qtconsole
-ipython==8.2.0
+ipython==8.3.0
     # via
     #   ipykernel
     #   ipywidgets
@@ -233,11 +238,11 @@ ipywidgets==7.7.0
     # via jupyter
 jedi==0.18.1
     # via ipython
-jinja2==3.1.1
+jinja2==3.1.2
     # via
     #   nbconvert
     #   notebook
-jmespath==0.10.0
+jmespath==1.0.0
     # via
     #   boto3
     #   botocore
@@ -245,13 +250,13 @@ joblib==1.1.0
     # via
     #   nltk
     #   sacremoses
-jsonargparse[signatures]==4.5.0
+jsonargparse[signatures]==4.7.2
     # via -r requirements.in
 jsonschema==4.4.0
     # via nbformat
 jupyter==1.0.0
     # via -r requirements.in
-jupyter-client==7.2.1
+jupyter-client==7.3.0
     # via
     #   ipykernel
     #   jupyter-console
@@ -260,20 +265,20 @@ jupyter-client==7.2.1
     #   qtconsole
 jupyter-console==6.4.3
     # via jupyter
-jupyter-core==4.9.2
+jupyter-core==4.10.0
     # via
     #   jupyter-client
     #   nbconvert
     #   nbformat
     #   notebook
     #   qtconsole
-jupyterlab-pygments==0.1.2
+jupyterlab-pygments==0.2.2
     # via nbconvert
 jupyterlab-widgets==1.1.0
     # via ipywidgets
 kiwisolver==1.4.2
     # via matplotlib
-mailchecker==4.1.14
+mailchecker==4.1.16
     # via python-benedict
 markdown==3.3.6
     # via tensorboard
@@ -299,13 +304,13 @@ multiprocess==0.70.12.2
     # via datasets
 nanotime==0.5.2
     # via dvc
-nbclient==0.5.13
+nbclient==0.6.0
     # via nbconvert
-nbconvert==6.4.5
+nbconvert==6.5.0
     # via
     #   jupyter
     #   notebook
-nbformat==5.2.0
+nbformat==5.3.0
     # via
     #   ipywidgets
     #   nbclient
@@ -320,13 +325,13 @@ nest-asyncio==1.5.5
     #   jupyter-client
     #   nbclient
     #   notebook
-networkx==2.7.1
+networkx==2.8
     # via
     #   dvc
     #   scikit-image
 nltk==3.7
     # via rouge-score
-notebook==6.4.10
+notebook==6.4.11
     # via
     #   jupyter
     #   widgetsnbextension
@@ -367,11 +372,12 @@ opencv-python-headless==4.5.5.64
     # via -r requirements.in
 packaging==21.3
     # via
-    #   bleach
     #   datasets
     #   dvc
     #   huggingface-hub
+    #   ipykernel
     #   matplotlib
+    #   nbconvert
     #   pytorch-lightning
     #   qtpy
     #   scikit-image
@@ -397,7 +403,7 @@ pep517==0.12.0
     # via pip-tools
 pexpect==4.8.0
     # via ipython
-phonenumbers==8.12.46
+phonenumbers==8.12.47
     # via python-benedict
 pickleshare==0.7.5
     # via ipython
@@ -408,7 +414,7 @@ pillow==9.1.0
     #   matplotlib
     #   scikit-image
     #   torchvision
-pip-tools==6.5.1
+pip-tools==6.6.0
     # via -r requirements.in
 plotly==5.7.0
     # via -r requirements.in
@@ -416,15 +422,15 @@ ply==3.11
     # via dvc
 portalocker==2.4.0
     # via sacrebleu
-prometheus-client==0.13.1
+prometheus-client==0.14.1
     # via notebook
 promise==2.3
     # via wandb
-prompt-toolkit==3.0.28
+prompt-toolkit==3.0.29
     # via
     #   ipython
     #   jupyter-console
-protobuf==3.20.0
+protobuf==3.20.1
     # via
     #   tensorboard
     #   tensorboardx
@@ -458,7 +464,7 @@ pycocotools==2.0.4
     #   pycocoevalcap
 pycparser==2.21
     # via cffi
-pydeprecate==0.3.2
+pydeprecate==0.3.1
     # via
     #   pytorch-lightning
     #   torchmetrics
@@ -466,12 +472,11 @@ pydot==1.4.2
     # via dvc
 pygit2==1.9.1
     # via scmrepo
-pygments==2.11.2
+pygments==2.12.0
     # via
     #   icecream
     #   ipython
     #   jupyter-console
-    #   jupyterlab-pygments
     #   nbconvert
     #   qtconsole
     #   rich
@@ -479,7 +484,7 @@ pygtrie==2.4.2
     # via
     #   dvc
     #   scmrepo
-pyparsing==3.0.7
+pyparsing==3.0.8
     # via
     #   dvc
     #   grandalf
@@ -488,7 +493,7 @@ pyparsing==3.0.7
     #   pydot
 pyrsistent==0.18.1
     # via jsonschema
-python-benedict==0.25.0
+python-benedict==0.25.1
     # via dvc
 python-dateutil==2.8.2
     # via
@@ -500,9 +505,9 @@ python-dateutil==2.8.2
     #   wandb
 python-fsutil==0.6.0
     # via python-benedict
-python-slugify==6.1.1
+python-slugify==6.1.2
     # via python-benedict
-pytorch-lightning==1.6.0
+pytorch-lightning==1.5.10
     # via -r requirements.in
 pytz==2022.1
     # via pandas
@@ -512,6 +517,7 @@ pyyaml==6.0
     # via
     #   huggingface-hub
     #   jsonargparse
+    #   omegaconf
     #   python-benedict
     #   pytorch-lightning
     #   transformers
@@ -525,7 +531,7 @@ qtconsole==5.3.0
     # via jupyter
 qtpy==2.0.1
     # via qtconsole
-regex==2022.3.15
+regex==2022.4.24
     # via
     #   fairseq
     #   nltk
@@ -550,7 +556,7 @@ requests-oauthlib==1.3.1
     # via google-auth-oauthlib
 responses==0.18.0
     # via datasets
-rich==12.1.0
+rich==12.3.0
     # via dvc
 rouge-score==0.0.4
     # via -r requirements.in
@@ -580,15 +586,15 @@ seaborn==0.11.2
     # via -r requirements.in
 send2trash==1.8.0
     # via notebook
-sentry-sdk==1.5.8
+sentry-sdk==1.5.10
     # via wandb
-setproctitle==1.2.2
+setproctitle==1.2.3
     # via wandb
 shortuuid==1.0.8
     # via
     #   dvc
     #   wandb
-shtab==1.5.3
+shtab==1.5.4
     # via dvc
 six==1.16.0
     # via
@@ -608,7 +614,7 @@ six==1.16.0
     #   wandb
 smmap==5.0.0
     # via gitdb
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
     # via beautifulsoup4
 stack-data==0.2.0
     # via ipython
@@ -619,7 +625,7 @@ tabulate==0.8.9
     #   sacrebleu
 tenacity==8.0.1
     # via plotly
-tensorboard==2.8.0
+tensorboard==2.9.0
     # via
     #   pytorch-lightning
     #   torch-tb-profiler
@@ -629,19 +635,17 @@ tensorboard-plugin-wit==1.8.1
     # via tensorboard
 tensorboardx==2.4.1
     # via -r requirements.in
-termcolor==1.1.0
-    # via yaspin
 terminado==0.13.3
     # via notebook
-testpath==0.6.0
-    # via nbconvert
 text-unidecode==1.3
     # via python-slugify
-tifffile==2022.3.25
+tifffile==2022.4.28
     # via scikit-image
 timm==0.5.4
     # via -r requirements.in
-tokenizers==0.11.6
+tinycss2==1.1.1
+    # via nbconvert
+tokenizers==0.12.1
     # via transformers
 toml==0.10.2
     # via
@@ -705,9 +709,9 @@ traitlets==5.1.1
     #   nbformat
     #   notebook
     #   qtconsole
-transformers==4.17.0
+transformers==4.18.0
     # via -r requirements.in
-typing-extensions==4.1.1
+typing-extensions==4.2.0
     # via
     #   aioitertools
     #   asyncssh
@@ -725,17 +729,19 @@ urllib3==1.26.9
     #   requests
     #   responses
     #   sentry-sdk
-voluptuous==0.13.0
+voluptuous==0.13.1
     # via dvc
-wandb==0.12.11
+wandb==0.12.15
     # via -r requirements.in
 wcwidth==0.2.5
     # via
     #   ftfy
     #   prompt-toolkit
 webencodings==0.5.1
-    # via bleach
-werkzeug==2.1.1
+    # via
+    #   bleach
+    #   tinycss2
+werkzeug==2.1.2
     # via tensorboard
 wheel==0.37.1
     # via
@@ -751,8 +757,6 @@ xxhash==3.0.0
     # via datasets
 yarl==1.7.2
     # via aiohttp
-yaspin==2.1.0
-    # via wandb
 zc-lockfile==2.0
     # via dvc
 zipp==3.8.0
