--- a/requirements.txt
+++ b/requirements.txt
@@ -53,8 +53,6 @@ backcall==0.2.0
     # via ipython
 beautifulsoup4==4.10.0
     # via nbconvert
-bitarray==2.4.1
-    # via fairseq
 bleach==4.1.0
     # via nbconvert
 boto3==1.21.21
@@ -102,6 +100,8 @@ cycler==0.11.0
     # via matplotlib
 cython==0.29.28
     # via fairseq
+dataclasses==0.6
+    # via fairseq
 datasets==2.1.0
     # via -r requirements.in
 debugpy==1.6.0
@@ -142,7 +142,7 @@ executing==0.8.3
     # via
     #   icecream
     #   stack-data
-fairseq @ git+https://github.com/pytorch/fairseq@806855bf660ea748ed7ffb42fe8dcc881ca3aca0
+fairseq==0.10.2
     # via -r requirements.in
 filelock==3.6.0
     # via
@@ -211,6 +211,7 @@ importlib-metadata==4.11.3
 importlib-resources==5.2.3
     # via
     #   dvc
+    #   hydra-core
     #   jsonschema
 ipykernel==6.11.0
     # via
@@ -245,6 +246,7 @@ joblib==1.1.0
     # via
     #   nltk
     #   sacremoses
+    #   scikit-learn
 jsonargparse[signatures]==4.5.0
     # via -r requirements.in
 jsonschema==4.4.0
@@ -346,6 +348,7 @@ numpy==1.22.3
     #   rouge-score
     #   sacrebleu
     #   scikit-image
+    #   scikit-learn
     #   scipy
     #   seaborn
     #   tensorboard
@@ -360,9 +363,7 @@ oauthlib==3.2.0
 ofa @ git+https://github.com/mthoreson3/OFA@26916038139a44eaafa06c6d7e04b87ef4d1bc0a
     # via -r requirements.in
 omegaconf==2.0.6
-    # via
-    #   fairseq
-    #   hydra-core
+    # via hydra-core
 opencv-python-headless==4.5.5.64
     # via -r requirements.in
 packaging==21.3
@@ -512,6 +513,7 @@ pyyaml==6.0
     # via
     #   huggingface-hub
     #   jsonargparse
+    #   omegaconf
     #   python-benedict
     #   pytorch-lightning
     #   transformers
@@ -570,9 +572,12 @@ sacremoses==0.0.49
     # via transformers
 scikit-image==0.19.2
     # via -r requirements.in
+scikit-learn==1.0.2
+    # via -r requirements.in
 scipy==1.8.0
     # via
     #   scikit-image
+    #   scikit-learn
     #   seaborn
 scmrepo==0.0.16
     # via dvc
@@ -637,6 +642,8 @@ testpath==0.6.0
     # via nbconvert
 text-unidecode==1.3
     # via python-slugify
+threadpoolctl==3.1.0
+    # via scikit-learn
 tifffile==2022.3.25
     # via scikit-image
 timm==0.5.4
@@ -662,9 +669,7 @@ torch==1.11.0+cu113
 torch-tb-profiler==0.4.0
     # via -r requirements.in
 torchaudio==0.11.0+cu113
-    # via
-    #   -r requirements.in
-    #   fairseq
+    # via -r requirements.in
 torchmetrics==0.8.0
     # via
     #   -r requirements.in
