--- a/dvc.yaml
+++ b/dvc.yaml
@@ -306,6 +306,41 @@ stages:
     outs:
       - data/06_models/simple_image
 
+  test_resnet_hate_bert:
+    cmd: >
+        python -m hateful_memes.models.resnet_hate_bert
+        --batch_size 4 
+        --fast_dev_run True
+        && echo "PASSED" > logs/test_resnet_hate_bert.log
+    deps:
+      - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
+      - hateful_memes/models/resnet_hate_bert.py
+    outs:
+      - logs/test_resnet_hate_bert.log
+
+  resnet_hate_bert:
+    vars:
+      - config/resnet_hate_bert.yaml
+    cmd: >
+        python -m hateful_memes.models.resnet_hate_bert
+        --batch_size ${batch_size}
+        --lr ${lr}
+        --epochs ${epochs}
+        --max_length ${max_length}
+        --dense_dim ${dense_dim}
+        --dropout_rate ${dropout_rate}
+        --grad_clip ${gradient_clip_value}
+        --model_dir data/06_models/resnet_hate_bert
+        --project ${project_prefix}resnet_hate_bert
+    deps:
+      - logs/resnet_hate_bert.log
+      - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
+      - hateful_memes/models/resnet_hate_bert.py
+    outs:
+      - data/06_models/resnet_hate_bert
+
   baseline:
     cmd: python -m hateful_memes.models.baseline_algorithm
     deps:
