--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -61,6 +61,12 @@ jobs:
           dvc repro --pull distilbert
           dvc push -d distilbert
 
+      - name: Train Hate Bert
+        continue-on-error: true
+        run: |
+          dvc repro --pull hate_bert
+          dvc push -d hate_bert
+
       - name: Train Simple MLP Image Model
         continue-on-error: true
         run: |
