adding in some weight decay

--- a/config/visual_bert_with_od.yaml
+++ b/config/visual_bert_with_od.yaml
@@ -4,5 +4,6 @@ epochs: 1000
 max_length: 96
 dense_dim: 1024
 num_queries: 5
-dropout_rate: 0.5
+dropout_rate: 0.2
 gradient_clip_value: 1.0
+weight_decay: 1e-5
