--- a/config/visual_bert_with_od.yaml
+++ b/config/visual_bert_with_od.yaml
@@ -1,9 +1,10 @@
-batch_size: 8
+batch_size: 16
 lr: 1e-3
 epochs: 1000
 max_length: 96
 dense_dim: 1024
-num_queries: 10
-dropout_rate: 0.2
+# Always uses og image, so 7+1 = 8
+num_queries: 3
+dropout_rate: 0.1
 gradient_clip_value: 1.0
-weight_decay: 1e-3
+weight_decay: 0
