Adding back vbod.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -514,6 +514,7 @@ stages:
         --simple_mlp_image_ckpt data/06_models/simple_mlp_image
         --simple_text_ckpt data/06_models/simple_text
         --visual_bert_ckpt data/06_models/visual_bert
+        --visual_bert_with_od_ckpt data/06_models/visual_bert_with_od
         --vit_ckpt data/06_models/vit
         --beit_ckpt data/06_models/beit
         --electra_ckpt data/06_models/electra
@@ -540,8 +541,7 @@ stages:
       - data/06_models/beit
       - data/06_models/electra
       - data/06_models/distilbert
-      # - data/06_models/visual_bert_with_od
-        # --visual_bert_with_od_ckpt data/06_models/visual_bert_with_od
+      - data/06_models/visual_bert_with_od
     outs:
       - data/06_models/super_model
       - data/07_model_output/super_model
